--- a/nginx.conf
+++ b/nginx.conf
@@ -7,22 +7,54 @@ http {
         server zeus-api:8000;
     }
 
+    ## 5. Variables d'environnement pour la production
+    
+    Ajoutez dans GitHub Secrets :
+    - `OPENAI_API_KEY`
+    - `DOCKER_USERNAME`
+    - `DOCKER_PASSWORD`
+    - `HOST` (votre serveur)
+    - `USERNAME` (utilisateur SSH)
+    - `SSH_KEY` (clé privée SSH)
+    
+    ## 6. Configuration du domaine
+    
+    Mettez à jour `nginx.conf` avec votre domaine :
+    ```ini
     server {
         listen 80;
-        server_name votre-domaine.com;
+        server_name votre-domaine.com www.votre-domaine.com;
         return 301 https://$server_name$request_uri;
     }
-
+    
     server {
         listen 443 ssl http2;
-        server_name votre-domaine.com;
-
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        client_max_body_size 100M;
+        server_name votre-domaine.com www.votre-domaine.com;
+    
+        ssl_certificate /etc/letsencrypt/live/votre-domaine.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/votre-domaine.com/privkey.pem;
+    
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ =404;
+        }
+        
+        location /api/ {
+            proxy_pass http://zeus_api:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        location /dashboard {
+            alias /usr/share/nginx/html/dashboard.html;
+        }
+    }
+    ```
+    
+    client_max_body_size 100M;
 
         location / {
             proxy_pass http://zeus_api;
